--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,7 @@
 TODO: 1. SEO-friendly urls
 TODO: 2. toasts with messages
 TODO: 3. translations
-TODO: 4. SEO (depends on 1, 6)
+TODO: 4. SEO (depends on 1)
 TODO: 5. favicon
-TODO: 6. cron doesn't work
+TODO: 6. add session model to clear sessions
+TODO: 7. splitPDF
